Fix styling issue in view details modal when entries are too long

--- a/components/common.module.scss
+++ b/components/common.module.scss
@@ -2,3 +2,17 @@
     cursor: pointer;
     color: #007bff;
 }
+
+.fileTableViewDetailsModal {
+    max-width: 700px;
+
+    table {
+        td:first-child {
+            font-weight: bold;
+            background: rgb(240, 240, 240);
+        }
+        td:nth-child(2) {
+            word-break: break-word;
+        }
+    }
+}
